updated notebooks for TRAPI 1.0.0 examples

--- a/notebooks/babel/integrations/Default/CHP_Endpoint_Example.ipynb
+++ b/notebooks/babel/integrations/Default/CHP_Endpoint_Example.ipynb
@@ -28,18 +28,14 @@
    "source": [
     "# /predicate functionality example\n",
     "By running /predicates you can extract a json object with the following predicates:<br>\n",
-    "1.) biolink:GeneToDiseaseAssociation<br>\n",
-    "2.) biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation<br>\n",
-    "3.) biolink:ChemicalToGeneAssociation<br>\n",
-    "4.) biolink:DiseaseToPhenotypicFeatureAssociation<br>\n",
+    "1.) biolink:affects<br>\n",
+    "2.) biolink:has_phenotype<br>\n",
     "\n",
-    "The above predicates match the following biolink entities:<br>\n",
+    "The above predicates link the following biolink entities:<br>\n",
     "1.) biolink:Gene<br>\n",
     "2.) biolink:Drug<br>\n",
     "3.) biolink:Disease<br>\n",
-    "4.) biolink:PhenotypicFeature<br>\n",
-    "\n",
-    "It should be noted for this handler that only the edge predicates biolink:GeneToDiseaseAssociation, biolink:ChemicalToGeneAssociation and biolink:DiseaseToPhenotypicFeatureAssociation are used to link biolink:Gene and biolink:Drug nodes to the biolink:Disease node and the biolink:Disease node to the biolink:PhenotypicFeature node."
+    "4.) biolink:PhenotypicFeature<br>"
    ]
   },
   {
@@ -52,22 +48,22 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"biolink:Gene\": {\n",
-      "    \"biolink:Disease\": [\n",
-      "      \"biolink:GeneToDiseaseAssociation\"\n",
+      "  \"biolink:Disease\": {\n",
+      "    \"biolink:PhenotypicFeature\": [\n",
+      "      \"biolink:has_phenotype\"\n",
       "    ]\n",
       "  },\n",
       "  \"biolink:Drug\": {\n",
       "    \"biolink:Disease\": [\n",
-      "      \"biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation\"\n",
+      "      \"biolink:affects\"\n",
       "    ],\n",
       "    \"biolink:Gene\": [\n",
-      "      \"biolink:ChemicalToGeneAssociation\"\n",
+      "      \"biolink:affects\"\n",
       "    ]\n",
       "  },\n",
-      "  \"biolink:Disease\": {\n",
-      "    \"biolink:PhenotypicFeature\": [\n",
-      "      \"biolink:DiseaseToPhenotypicFeatureAssociation\"\n",
+      "  \"biolink:Gene\": {\n",
+      "    \"biolink:Disease\": [\n",
+      "      \"biolink:affects\"\n",
       "    ]\n",
       "  }\n",
       "}\n"
@@ -108,18 +104,12 @@
     "def buildQuery(st, disease, genes=[], drugs=[]):\n",
     "    \n",
     "    # empty response\n",
-    "    reasoner_std = { \"query_graph\": dict(),\n",
-    "                     \"knowledge_graph\": dict(),\n",
-    "                     \"results\": list()\n",
+    "    reasoner_std = { \"query_graph\": dict()\n",
     "                   }\n",
     "    # empty query graph\n",
     "    reasoner_std[\"query_graph\"] = { \"edges\": dict(),\n",
     "                                    \"nodes\": dict()\n",
     "                                  }\n",
-    "    # empty knowledge graph\n",
-    "    reasoner_std[\"knowledge_graph\"] = { \"edges\": dict(),\n",
-    "                                        \"nodes\": dict()\n",
-    "                                      }\n",
     "    \n",
     "    node_count = 0\n",
     "    edge_count = 0\n",
@@ -148,13 +138,13 @@
     "    for node_id in reasoner_std['query_graph']['nodes'].keys():\n",
     "        node = reasoner_std['query_graph']['nodes'][node_id]\n",
     "        if node['category'] == 'biolink:Gene':\n",
-    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:GeneToDiseaseAssociation',\n",
+    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:affects',\n",
     "                                                                               'subject': node_id,\n",
     "                                                                               'object': 'n{}'.format(node_count -1)   # should be disease node\n",
     "                                                                             }\n",
     "            edge_count += 1\n",
     "        elif node['category'] == 'biolink:Drug':\n",
-    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation',\n",
+    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:affects',\n",
     "                                                                               'subject': node_id,\n",
     "                                                                               'object': 'n{}'.format(node_count -1)  # should be disease node\n",
     "                                                                             }\n",
@@ -168,14 +158,13 @@
     "    node_count += 1\n",
     "    \n",
     "    # link disease to target\n",
-    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:DiseaseToPhenotypicFeatureAssociation',\n",
+    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:has_phenotype',\n",
     "                                                                       'subject': 'n{}'.format(node_count-2),\n",
     "                                                                       'object': 'n{}'.format(node_count-1),\n",
     "                                                                       # properties is optional - if not specified default \n",
     "                                                                       # default qualifier is '>=', can be '<='\n",
     "                                                                       'properties': { 'qualifier':'>=',\n",
-    "                                                                                       'days': st,\n",
-    "                                                                                       'contributions':True    # uncomment to include contributions\n",
+    "                                                                                       'days': st\n",
     "                                                                                     }\n",
     "                                                                     }\n",
     "    return reasoner_std"
@@ -278,9 +267,8 @@
     "KG = chp_res['message']['knowledge_graph']\n",
     "for edge_key in KG['edges'].keys():\n",
     "    edge = KG['edges'][edge_key]\n",
-    "    if edge['predicate'] == 'biolink:DiseaseToPhenotypicFeatureAssociation':\n",
-    "        p_survival = edge['has_confidence_level']\n",
-    "        contributions = edge['properties']['contributions']\n",
+    "    if edge['predicate'] == 'biolink:has_phenotype':\n",
+    "        p_survival = edge['attributes'][0]['value']\n",
     "\n",
     "# probability of surival given QG specification\n",
     "print(\"Probability of survival > {} days is:\".format(survival_time), p_survival)"
