--- a/notebooks/babel/integrations/Wildcard/Wildcard_Example.ipynb
+++ b/notebooks/babel/integrations/Wildcard/Wildcard_Example.ipynb
@@ -28,18 +28,14 @@
    "source": [
     "# /predicate functionality example\n",
     "By running /predicates you can extract a json object with the following predicates:<br>\n",
-    "1.) biolink:GeneToDiseaseAssociation<br>\n",
-    "2.) biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation<br>\n",
-    "3.) biolink:ChemicalToGeneAssociation<br>\n",
-    "4.) biolink:DiseaseToPhenotypicFeatureAssociation<br>\n",
+    "1.) biolink:affects<br>\n",
+    "2.) biolink:has_phenotype<br>\n",
     "\n",
-    "The above predicates match the following biolink entities:<br>\n",
+    "The above predicates link the following biolink entities:<br>\n",
     "1.) biolink:Gene<br>\n",
     "2.) biolink:Drug<br>\n",
     "3.) biolink:Disease<br>\n",
-    "4.) biolink:PhenotypicFeature<br>\n",
-    "\n",
-    "It should be noted for this handler that only the edge predicates biolink:GeneToDiseaseAssociation, biolink:ChemicalToGeneAssociation and biolink:DiseaseToPhenotypicFeatureAssociation are used to link a biolink:Gene and a biolink:Drug node to the biolink:Disease node and the biolink:Disease node to the biolink:PhenotypicFeature node."
+    "4.) biolink:PhenotypicFeature<br>"
    ]
   },
   {
@@ -52,22 +48,22 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"biolink:Gene\": {\n",
-      "    \"biolink:Disease\": [\n",
-      "      \"biolink:GeneToDiseaseAssociation\"\n",
+      "  \"biolink:Disease\": {\n",
+      "    \"biolink:PhenotypicFeature\": [\n",
+      "      \"biolink:has_phenotype\"\n",
       "    ]\n",
       "  },\n",
       "  \"biolink:Drug\": {\n",
       "    \"biolink:Disease\": [\n",
-      "      \"biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation\"\n",
+      "      \"biolink:affects\"\n",
       "    ],\n",
       "    \"biolink:Gene\": [\n",
-      "      \"biolink:ChemicalToGeneAssociation\"\n",
+      "      \"biolink:affects\"\n",
       "    ]\n",
       "  },\n",
-      "  \"biolink:Disease\": {\n",
-      "    \"biolink:PhenotypicFeature\": [\n",
-      "      \"biolink:DiseaseToPhenotypicFeatureAssociation\"\n",
+      "  \"biolink:Gene\": {\n",
+      "    \"biolink:Disease\": [\n",
+      "      \"biolink:affects\"\n",
       "    ]\n",
       "  }\n",
       "}\n"
@@ -108,18 +104,12 @@
     "def buildQuery(st, disease, drug):\n",
     "    \n",
     "    # empty response\n",
-    "    reasoner_std = { \"query_graph\": dict(),\n",
-    "                     \"knowledge_graph\": dict(),\n",
-    "                     \"results\": list()\n",
+    "    reasoner_std = { \"query_graph\": dict()\n",
     "                   }\n",
     "    # empty query graph\n",
     "    reasoner_std[\"query_graph\"] = { \"edges\": dict(),\n",
     "                                    \"nodes\": dict()\n",
     "                                  }\n",
-    "    # empty knowledge graph\n",
-    "    reasoner_std[\"knowledge_graph\"] = { \"edges\": dict(),\n",
-    "                                        \"nodes\": dict()\n",
-    "                                      }\n",
     "    \n",
     "    node_count = 0\n",
     "    edge_count = 0\n",
@@ -142,14 +132,14 @@
     "    node_count += 1\n",
     "    \n",
     "    # link gene evidence to disease\n",
-    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:GeneToDiseaseAssociation',\n",
+    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:affects',\n",
     "                                                                       'subject': 'n{}'.format(node_count -3),\n",
     "                                                                       'object': 'n{}'.format(node_count -1)   # should be disease node\n",
     "                                                                      }\n",
     "    edge_count += 1\n",
     "    \n",
     "    # link drug evidence to disease\n",
-    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:ChemicalToDiseaseOrPhenotypicFeatureAssociation',\n",
+    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:affects',\n",
     "                                                                       'subject': 'n{}'.format(node_count -2),\n",
     "                                                                       'object': 'n{}'.format(node_count -1)  # should be disease node\n",
     "                                                                     }\n",
@@ -163,7 +153,7 @@
     "    node_count += 1\n",
     "    \n",
     "    # link disease to target\n",
-    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:DiseaseToPhenotypicFeatureAssociation',\n",
+    "    reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:has_phenotype',\n",
     "                                                                       'subject': 'n{}'.format(node_count-2),\n",
     "                                                                       'object': 'n{}'.format(node_count-1),\n",
     "                                                                       'properties': { 'qualifier':'>=',\n",
@@ -221,6 +211,9 @@
     "query = buildQuery(survival_time, disease, drug)\n",
     "payload = {'message': query}\n",
     "\n",
+    "#increase max_results\n",
+    "payload['max_results'] = 100\n",
+    "\n",
     "r = requests.post('http://chp.thayer.dartmouth.edu/query/', json=payload)\n",
     "chp_res = json.loads(r.content)"
    ]
@@ -257,9 +250,9 @@
     "survival_result = results[0]\n",
     "\n",
     "for qge_id in survival_result['edge_bindings'].keys():\n",
-    "    if QG['edges'][qge_id]['predicate'] == 'biolink:DiseaseToPhenotypicFeatureAssociation':\n",
+    "    if QG['edges'][qge_id]['predicate'] == 'biolink:has_phenotype':\n",
     "        kge_id = survival_result['edge_bindings'][qge_id][0]['id']\n",
-    "        probability = KG['edges'][kge_id]['has_confidence_level']\n",
+    "        probability = KG['edges'][kge_id]['attributes'][0]['value']\n",
     "        \n",
     "print(\"P(survival_time > {} | drug & disease):\".format(survival_time),probability)"
    ]
@@ -280,16 +273,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['TP53'], 'ENSEMBL:ENSG00000141510', -0.033660234999710104)\n",
-      "(['VPS13C'], 'ENSEMBL:ENSG00000129003', -0.031878458032680954)\n",
-      "(['RYR2'], 'ENSEMBL:ENSG00000198626', 0.028681867597806714)\n",
-      "(['WNK3'], 'ENSEMBL:ENSG00000196632', -0.028082711800518235)\n",
-      "(['CHD4'], 'ENSEMBL:ENSG00000111642', -0.027544443554162527)\n",
-      "(['ROBO1'], 'ENSEMBL:ENSG00000169855', -0.027317485660542835)\n",
-      "(['MYCBP2'], 'ENSEMBL:ENSG00000005810', -0.026678035049294144)\n",
-      "(['SGIP1'], 'ENSEMBL:ENSG00000118473', -0.026346134957570193)\n",
-      "(['SPTA1'], 'ENSEMBL:ENSG00000163554', 0.02588583100880638)\n",
-      "(['ERBB2'], 'ENSEMBL:ENSG00000141736', -0.023752457155211085)\n"
+      "('TP53', 'CHEMBL:CHEMBL88', -0.033660234999710104)\n",
+      "('VPS13C', 'CHEMBL:CHEMBL88', -0.031878458032680954)\n",
+      "('RYR2', 'CHEMBL:CHEMBL88', 0.028681867597806714)\n",
+      "('WNK3', 'CHEMBL:CHEMBL88', -0.028082711800518235)\n",
+      "('CHD4', 'CHEMBL:CHEMBL88', -0.027544443554162527)\n",
+      "('ROBO1', 'CHEMBL:CHEMBL88', -0.027317485660542835)\n",
+      "('MYCBP2', 'CHEMBL:CHEMBL88', -0.026678035049294144)\n",
+      "('SGIP1', 'CHEMBL:CHEMBL88', -0.026346134957570193)\n",
+      "('SPTA1', 'CHEMBL:CHEMBL88', 0.02588583100880638)\n",
+      "('ERBB2', 'CHEMBL:CHEMBL88', -0.023752457155211085)\n",
+      "('ARID1B', 'CHEMBL:CHEMBL88', -0.023371729944973774)\n",
+      "('DNAH17', 'CHEMBL:CHEMBL88', 0.02304638426048171)\n",
+      "('NRK', 'CHEMBL:CHEMBL88', 0.022920967940909094)\n",
+      "('COL5A2', 'CHEMBL:CHEMBL88', -0.022218245042049008)\n",
+      "('UBR4', 'CHEMBL:CHEMBL88', -0.02216565214717962)\n",
+      "('BPTF', 'CHEMBL:CHEMBL88', -0.02201212047905177)\n",
+      "('GRIN2A', 'CHEMBL:CHEMBL88', -0.021934934420348655)\n",
+      "('KCNA4', 'CHEMBL:CHEMBL88', -0.021934934420348655)\n",
+      "('MUC16', 'CHEMBL:CHEMBL88', -0.021731907069193528)\n",
+      "('LRP1B', 'CHEMBL:CHEMBL88', -0.02170833573588305)\n",
+      "('CADM2', 'CHEMBL:CHEMBL88', -0.021449259068862334)\n",
+      "('AHNAK2', 'CHEMBL:CHEMBL88', -0.021348076703969352)\n",
+      "('AMOTL1', 'CHEMBL:CHEMBL88', -0.021348076703969352)\n",
+      "('MXRA5', 'CHEMBL:CHEMBL88', -0.021242890914230577)\n",
+      "('PRKDC', 'CHEMBL:CHEMBL88', -0.02121513477482944)\n",
+      "('TET1', 'CHEMBL:CHEMBL88', -0.02119430144420698)\n",
+      "('EP300', 'CHEMBL:CHEMBL88', -0.02119430144420698)\n",
+      "('KMT2C', 'CHEMBL:CHEMBL88', -0.021049824537509226)\n",
+      "('ADGRD1', 'CHEMBL:CHEMBL88', -0.02086240135248303)\n",
+      "('ECEL1', 'CHEMBL:CHEMBL88', -0.02086240135248303)\n",
+      "('ABCA13', 'CHEMBL:CHEMBL88', -0.0208306417882361)\n",
+      "('TENM2', 'CHEMBL:CHEMBL88', -0.020757215562744256)\n",
+      "('CDH1', 'CHEMBL:CHEMBL88', -0.02002685214200265)\n",
+      "('PLCE1', 'CHEMBL:CHEMBL88', -0.019887047224664597)\n",
+      "('VWA3A', 'CHEMBL:CHEMBL88', 0.019412298106802752)\n",
+      "('SCN2A', 'CHEMBL:CHEMBL88', 0.01933535563973416)\n",
+      "('SEMA5A', 'CHEMBL:CHEMBL88', 0.019125221708746375)\n",
+      "('PIK3C2B', 'CHEMBL:CHEMBL88', 0.019125221708746375)\n",
+      "('LRFN5', 'CHEMBL:CHEMBL88', 0.019125221708746375)\n",
+      "('BACH2', 'CHEMBL:CHEMBL88', 0.019027805120209414)\n",
+      "('UNC13A', 'CHEMBL:CHEMBL88', 0.018874029860447044)\n",
+      "('SCN3A', 'CHEMBL:CHEMBL88', 0.018874029860447044)\n",
+      "('SERPINE1', 'CHEMBL:CHEMBL88', 0.018586953462390667)\n",
+      "('SLC30A1', 'CHEMBL:CHEMBL88', 0.018586953462390667)\n",
+      "('CTNND2', 'CHEMBL:CHEMBL88', 0.018586953462390667)\n",
+      "('MTMR4', 'CHEMBL:CHEMBL88', 0.018489536873853706)\n",
+      "('AK9', 'CHEMBL:CHEMBL88', 0.018258819147022744)\n",
+      "('UNC13C', 'CHEMBL:CHEMBL88', 0.018072919170714595)\n",
+      "('ADAMTSL3', 'CHEMBL:CHEMBL88', 0.01806915933750332)\n",
+      "('DLC1', 'CHEMBL:CHEMBL88', 0.01806915933750332)\n",
+      "('MYO7B', 'CHEMBL:CHEMBL88', -0.017884230563530584)\n",
+      "('F5', 'CHEMBL:CHEMBL88', -0.017884230563530584)\n",
+      "('STAG2', 'CHEMBL:CHEMBL88', 0.01787808599364068)\n",
+      "('PKHD1L1', 'CHEMBL:CHEMBL88', 0.017849727053450924)\n",
+      "('DMD', 'CHEMBL:CHEMBL88', -0.017848711166072385)\n",
+      "('CMYA5', 'CHEMBL:CHEMBL88', 0.017842201443883626)\n",
+      "('MUC17', 'CHEMBL:CHEMBL88', 0.017837022133184374)\n",
+      "('PIK3CA', 'CHEMBL:CHEMBL88', 0.017734815681955618)\n",
+      "('PDZD2', 'CHEMBL:CHEMBL88', -0.017681865833744613)\n",
+      "('NIN', 'CHEMBL:CHEMBL88', -0.0176046797750415)\n",
+      "('GRIN2B', 'CHEMBL:CHEMBL88', -0.01760091994183023)\n",
+      "('FCGBP', 'CHEMBL:CHEMBL88', 0.017591009595584302)\n",
+      "('HDX', 'CHEMBL:CHEMBL88', -0.017552086880172114)\n",
+      "('HECW1', 'CHEMBL:CHEMBL88', 0.017534650924358887)\n",
+      "('MYH13', 'CHEMBL:CHEMBL88', -0.01744714468206786)\n",
+      "('TLN1', 'CHEMBL:CHEMBL88', 0.01733981774728497)\n",
+      "('ASTN1', 'CHEMBL:CHEMBL88', -0.017220186788448166)\n",
+      "('BAZ2B', 'CHEMBL:CHEMBL88', -0.017220186788448166)\n",
+      "('DYNC2H1', 'CHEMBL:CHEMBL88', -0.017192187057412503)\n",
+      "('ADAMTS9', 'CHEMBL:CHEMBL88', -0.01711524459034391)\n",
+      "('SCN11A', 'CHEMBL:CHEMBL88', -0.017062651695474523)\n",
+      "('MROH5', 'CHEMBL:CHEMBL88', -0.017010302392239655)\n",
+      "('TRPM6', 'CHEMBL:CHEMBL88', -0.017010302392239655)\n",
+      "('KIAA1210', 'CHEMBL:CHEMBL88', -0.01690887643571215)\n",
+      "('CCDC168', 'CHEMBL:CHEMBL88', -0.01683605301100892)\n",
+      "('RPGRIP1', 'CHEMBL:CHEMBL88', -0.016835693801854828)\n",
+      "('NRP2', 'CHEMBL:CHEMBL88', -0.016835693801854828)\n",
+      "('MIS18BP1', 'CHEMBL:CHEMBL88', -0.016835693801854828)\n",
+      "('ABCF2', 'CHEMBL:CHEMBL88', -0.016835693801854828)\n",
+      "('MYO15A', 'CHEMBL:CHEMBL88', -0.016734511436961846)\n",
+      "('CEP295', 'CHEMBL:CHEMBL88', -0.016734511436961846)\n",
+      "('ETS2', 'CHEMBL:CHEMBL88', -0.016730751603750572)\n",
+      "('SF3B1', 'CHEMBL:CHEMBL88', -0.016580736177199473)\n",
+      "('HERC2', 'CHEMBL:CHEMBL88', -0.016576976343988203)\n",
+      "('SBSN', 'CHEMBL:CHEMBL88', -0.016451200815261493)\n",
+      "('NLGN4X', 'CHEMBL:CHEMBL88', -0.016451200815261493)\n",
+      "('RFPL2', 'CHEMBL:CHEMBL88', -0.016451200815261493)\n",
+      "('RAI14', 'CHEMBL:CHEMBL88', -0.016451200815261493)\n",
+      "('NAALADL2', 'CHEMBL:CHEMBL88', -0.016451200815261493)\n",
+      "('NWD1', 'CHEMBL:CHEMBL88', -0.016350018450368507)\n",
+      "('CRMP1', 'CHEMBL:CHEMBL88', -0.016350018450368507)\n",
+      "('PTPRH', 'CHEMBL:CHEMBL88', -0.016350018450368507)\n",
+      "('MAP3K15', 'CHEMBL:CHEMBL88', -0.016350018450368507)\n",
+      "('COL11A1', 'CHEMBL:CHEMBL88', -0.016350018450368507)\n",
+      "('PCDHA3', 'CHEMBL:CHEMBL88', -0.016248836085475525)\n",
+      "('WDR93', 'CHEMBL:CHEMBL88', -0.016245076252264252)\n",
+      "('ATAD2B', 'CHEMBL:CHEMBL88', -0.016192483357394864)\n",
+      "('ABCB11', 'CHEMBL:CHEMBL88', -0.016192483357394864)\n",
+      "('SETD2', 'CHEMBL:CHEMBL88', -0.01614365029573675)\n",
+      "('EPG5', 'CHEMBL:CHEMBL88', -0.016038708097632495)\n"
      ]
     }
    ],
@@ -304,11 +387,11 @@
     "genes = []\n",
     "for sr in sensitivity_results:\n",
     "    for qge_id in sr['edge_bindings'].keys():\n",
-    "        if QG['edges'][qge_id]['predicate'] == 'biolink:GeneToDiseaseAssociation':\n",
+    "        if QG['edges'][qge_id]['predicate'] == 'biolink:affects':\n",
     "            kge_id = sr['edge_bindings'][qge_id][0]['id']\n",
     "            sensitivity = KG['edges'][kge_id]\n",
     "            gene_curie = sensitivity['subject']\n",
-    "            gene_weight = sensitivity['value']    \n",
+    "            gene_weight = sensitivity['attributes'][0]['value']    \n",
     "    for qgn_id in sr['node_bindings'].keys():\n",
     "        if QG['nodes'][qgn_id]['category'] == 'biolink:Gene':\n",
     "            kgn_id = sr['node_bindings'][qgn_id][0]['id']\n",
