notebooks allowing for wildcard query with no evidence

--- a/notebooks/babel/integrations/Onehop/OneHop_Example.ipynb
+++ b/notebooks/babel/integrations/Onehop/OneHop_Example.ipynb
@@ -48,22 +48,25 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"biolink:Disease\": {\n",
-      "    \"biolink:PhenotypicFeature\": [\n",
-      "      \"biolink:has_phenotype\"\n",
+      "  \"biolink:Gene\": {\n",
+      "    \"biolink:Disease\": [\n",
+      "      \"biolink:gene_associated_with_condition\"\n",
+      "    ],\n",
+      "    \"biolink:Drug\": [\n",
+      "      \"biolink:interacts_with\"\n",
       "    ]\n",
       "  },\n",
       "  \"biolink:Drug\": {\n",
       "    \"biolink:Disease\": [\n",
-      "      \"biolink:affects\"\n",
+      "      \"biolink:treats\"\n",
       "    ],\n",
       "    \"biolink:Gene\": [\n",
-      "      \"biolink:affects\"\n",
+      "      \"biolink:interacts_with\"\n",
       "    ]\n",
       "  },\n",
-      "  \"biolink:Gene\": {\n",
-      "    \"biolink:Disease\": [\n",
-      "      \"biolink:affects\"\n",
+      "  \"biolink:Disease\": {\n",
+      "    \"biolink:PhenotypicFeature\": [\n",
+      "      \"biolink:has_phenotype\"\n",
       "    ]\n",
       "  }\n",
       "}\n"
@@ -121,7 +124,7 @@
     "                                                 }\n",
     "    \n",
     "    # link drug to gene\n",
-    "    reasoner_std['query_graph']['edges']['e0'] = { 'predicate':'biolink:affects',\n",
+    "    reasoner_std['query_graph']['edges']['e0'] = { 'predicate':'biolink:interacts_with',\n",
     "                                                   'subject': 'n0',\n",
     "                                                   'object': 'n1'\n",
     "                                                 }\n",
@@ -176,7 +179,7 @@
     "payload = {'message': query}\n",
     "\n",
     "#increase max_results\n",
-    "payload['max_results'] = 100\n",
+    "payload['max_results'] = 10\n",
     "\n",
     "r = requests.post('http://chp.thayer.dartmouth.edu/query/', json=payload)\n",
     "chp_res = json.loads(r.content)"
@@ -214,97 +217,7 @@
       "('RYR2', 'ENSEMBL:ENSG00000198626', 0.02590807163352221)\n",
       "('ERBB2', 'ENSEMBL:ENSG00000141736', -0.02417889048482236)\n",
       "('CDH1', 'ENSEMBL:ENSG00000039068', -0.023975780606831892)\n",
-      "('SPTA1', 'ENSEMBL:ENSG00000163554', 0.023688321656584372)\n",
-      "('BPTF', 'ENSEMBL:ENSG00000171634', -0.023333504505433804)\n",
-      "('UBR4', 'ENSEMBL:ENSG00000127481', -0.023119954959542183)\n",
-      "('GRIN2A', 'ENSEMBL:ENSG00000183454', -0.02287395580099089)\n",
-      "('KCNA4', 'ENSEMBL:ENSG00000182255', -0.02287395580099089)\n",
-      "('KMT2C', 'ENSEMBL:ENSG00000055609', -0.022825441929686847)\n",
-      "('ABCA13', 'ENSEMBL:ENSG00000179869', -0.022557407161036602)\n",
-      "('CADM2', 'ENSEMBL:ENSG00000175161', -0.02238034312500726)\n",
-      "('AHNAK2', 'ENSEMBL:ENSG00000185567', -0.022274568980153623)\n",
-      "('AMOTL1', 'ENSEMBL:ENSG00000166025', -0.022274568980153623)\n",
-      "('MXRA5', 'ENSEMBL:ENSG00000101825', -0.022202438524703497)\n",
-      "('TET1', 'ENSEMBL:ENSG00000138336', -0.022132729607574925)\n",
-      "('EP300', 'ENSEMBL:ENSG00000100393', -0.022132729607574925)\n",
-      "('NRK', 'ENSEMBL:ENSG00000123572', 0.02209318944351092)\n",
-      "('DNAH17', 'ENSEMBL:ENSG00000187775', 0.021805741299719496)\n",
-      "('ADGRD1', 'ENSEMBL:ENSG00000111452', -0.021780956304169995)\n",
-      "('ECEL1', 'ENSEMBL:ENSG00000171551', -0.021780956304169995)\n",
-      "('TENM2', 'ENSEMBL:ENSG00000145934', -0.02170882584871987)\n",
-      "('PIK3CA', 'ENSEMBL:ENSG00000121879', 0.020254008806143253)\n",
-      "('MYO7B', 'ENSEMBL:ENSG00000169994', -0.018990079438283333)\n",
-      "('CHD4', 'ENSEMBL:ENSG00000111642', -0.01884943414244846)\n",
-      "('VWA3A', 'ENSEMBL:ENSG00000175267', 0.018744795024164335)\n",
-      "('GRIN2B', 'ENSEMBL:ENSG00000273079', -0.01870801505200697)\n",
-      "('SCN2A', 'ENSEMBL:ENSG00000136531', 0.018640635238191736)\n",
-      "('MYH13', 'ENSEMBL:ENSG00000006788', -0.018566175679428275)\n",
-      "('MROH5', 'ENSEMBL:ENSG00000226807', -0.018497660839043535)\n",
-      "('TRPM6', 'ENSEMBL:ENSG00000119121', -0.018497660839043535)\n",
-      "('SEMA5A', 'ENSEMBL:ENSG00000112902', 0.0184569265982357)\n",
-      "('PIK3C2B', 'ENSEMBL:ENSG00000133056', 0.0184569265982357)\n",
-      "('LRFN5', 'ENSEMBL:ENSG00000165379', 0.0184569265982357)\n",
-      "('CCDC168', 'ENSEMBL:ENSG00000175820', -0.018360011147236073)\n",
-      "('BACH2', 'ENSEMBL:ENSG00000112182', 0.01835695649303434)\n",
-      "('NIN', 'ENSEMBL:ENSG00000100503', -0.018318982444133148)\n",
-      "('HDX', 'ENSEMBL:ENSG00000165259', -0.018282917216408085)\n",
-      "('UNC13A', 'ENSEMBL:ENSG00000130477', 0.01821511712045564)\n",
-      "('SCN3A', 'ENSEMBL:ENSG00000153253', 0.01821511712045564)\n",
-      "('ADAMTS9', 'ENSEMBL:ENSG00000163638', -0.018214402376023342)\n",
-      "('SCN11A', 'ENSEMBL:ENSG00000168356', -0.01817833714829828)\n",
-      "('F5', 'ENSEMBL:ENSG00000198734', -0.018072563003444644)\n",
-      "('KIAA1210', 'ENSEMBL:ENSG00000250423', -0.01803649777571958)\n",
-      "('SERPINE1', 'ENSEMBL:ENSG00000106366', 0.01792724869452701)\n",
-      "('CTNND2', 'ENSEMBL:ENSG00000169862', 0.01792724869452701)\n",
-      "('SLC30A1', 'ENSEMBL:ENSG00000170385', 0.017927248694527005)\n",
-      "('ATP4A', 'ENSEMBL:ENSG00000105675', 0.017927248694527005)\n",
-      "('MTMR4', 'ENSEMBL:ENSG00000108389', 0.017827278589325646)\n",
-      "('ETS2', 'ENSEMBL:ENSG00000157557', -0.017826563844893346)\n",
-      "('STAG2', 'ENSEMBL:ENSG00000101972', 0.01772192472660922)\n",
-      "('HERC2', 'ENSEMBL:ENSG00000128731', -0.01768472447231465)\n",
-      "('AK9', 'ENSEMBL:ENSG00000155085', 0.017581279430774352)\n",
-      "('RPGRIP1', 'ENSEMBL:ENSG00000092200', -0.01754330538187316)\n",
-      "('NRP2', 'ENSEMBL:ENSG00000118257', -0.01754330538187316)\n",
-      "('MIS18BP1', 'ENSEMBL:ENSG00000129534', -0.01754330538187316)\n",
-      "('ABCF2', 'ENSEMBL:ENSG00000033050', -0.01754330538187316)\n",
-      "('MYO15A', 'ENSEMBL:ENSG00000091536', -0.017437531237019525)\n",
-      "('CEP295', 'ENSEMBL:ENSG00000166004', -0.017437531237019525)\n",
-      "('DYNC2H1', 'ENSEMBL:ENSG00000187240', -0.017401045727157255)\n",
-      "('ADAMTSL3', 'ENSEMBL:ENSG00000156218', 0.017393381110047075)\n",
-      "('DLC1', 'ENSEMBL:ENSG00000164741', 0.017393381110047075)\n",
-      "('WDR93', 'ENSEMBL:ENSG00000140527', -0.01733295116890972)\n",
-      "('ATAD2B', 'ENSEMBL:ENSG00000119778', -0.017296885941184656)\n",
-      "('SF3B1', 'ENSEMBL:ENSG00000115524', -0.017295691864440826)\n",
-      "('SBSN', 'ENSEMBL:ENSG00000189001', -0.017155466850743168)\n",
-      "('NLGN4X', 'ENSEMBL:ENSG00000146938', -0.017155466850743168)\n",
-      "('RFPL2', 'ENSEMBL:ENSG00000128253', -0.017155466850743168)\n",
-      "('RAI14', 'ENSEMBL:ENSG00000039560', -0.017155466850743168)\n",
-      "('NAALADL2', 'ENSEMBL:ENSG00000177694', -0.017155466850743168)\n",
-      "('EPG5', 'ENSEMBL:ENSG00000152223', -0.017155046568605958)\n",
-      "('NWD1', 'ENSEMBL:ENSG00000188039', -0.017049692705889533)\n",
-      "('CRMP1', 'ENSEMBL:ENSG00000072832', -0.017049692705889533)\n",
-      "('PTPRH', 'ENSEMBL:ENSG00000080031', -0.017049692705889533)\n",
-      "('MAP3K15', 'ENSEMBL:ENSG00000180815', -0.017049692705889533)\n",
-      "('COL11A1', 'ENSEMBL:ENSG00000060718', -0.017049692705889533)\n",
-      "('ASTN1', 'ENSEMBL:ENSG00000152092', -0.017013627478164466)\n",
-      "('UNC13C', 'ENSEMBL:ENSG00000137766', 0.01700434850217325)\n",
-      "('SETD2', 'ENSEMBL:ENSG00000181555', -0.01687178810558577)\n",
-      "('ZNF217', 'ENSEMBL:ENSG00000171940', -0.01680327326520103)\n",
-      "('PCNT', 'ENSEMBL:ENSG00000160299', 0.016762539024393192)\n",
-      "('CMYA5', 'ENSEMBL:ENSG00000164309', 0.016758349343621956)\n",
-      "('ACTN3', 'ENSEMBL:ENSG00000248746', -0.016661854174759537)\n",
-      "('MYLK2', 'ENSEMBL:ENSG00000101306', -0.016661854174759537)\n",
-      "('GARNL3', 'ENSEMBL:ENSG00000136895', -0.016661854174759537)\n",
-      "('SYDE1', 'ENSEMBL:ENSG00000105137', -0.016661854174759537)\n",
-      "('ARHGAP24', 'ENSEMBL:ENSG00000138639', -0.016661854174759537)\n",
-      "('ENTHD1', 'ENSEMBL:ENSG00000176177', -0.016661854174759537)\n",
-      "('ESPN', 'ENSEMBL:ENSG00000187017', -0.016661854174759537)\n",
-      "('VANGL2', 'ENSEMBL:ENSG00000162738', -0.016661854174759537)\n",
-      "('USP25', 'ENSEMBL:ENSG00000155313', -0.016661854174759537)\n",
-      "('LRRTM4', 'ENSEMBL:ENSG00000176204', -0.016661854174759537)\n",
-      "('CTNND1', 'ENSEMBL:ENSG00000198561', -0.016661854174759537)\n",
-      "('NBPF11', 'ENSEMBL:ENSG00000263956', -0.016661854174759537)\n",
-      "('NKAIN2', 'ENSEMBL:ENSG00000188580', -0.016661854174759537)\n"
+      "('SPTA1', 'ENSEMBL:ENSG00000163554', 0.023688321656584372)\n"
      ]
     }
    ],
@@ -319,7 +232,7 @@
     "genes = []\n",
     "for sr in sensitivity_results:\n",
     "    for qge_id in sr['edge_bindings'].keys():\n",
-    "        if QG['edges'][qge_id]['predicate'] == 'biolink:affects':\n",
+    "        if QG['edges'][qge_id]['predicate'] == 'biolink:interacts_with':\n",
     "            kge_id = sr['edge_bindings'][qge_id][0]['id']\n",
     "            sensitivity = KG['edges'][kge_id]\n",
     "            gene_curie = sensitivity['subject']\n",
@@ -358,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
