--- a/notebooks/babel/integrations/Default/CHP_Endpoint_Example.ipynb
+++ b/notebooks/babel/integrations/Default/CHP_Endpoint_Example.ipynb
@@ -28,7 +28,9 @@
    "source": [
     "# /predicate functionality example\n",
     "By running /predicates you can extract a json object with the following predicates:<br>\n",
-    "1.) biolink:affects<br>\n",
+    "1.) biolink:treats<br>\n",
+    "2.) biolink:gene_associated_with_condition<br>\n",
+    "3.) biolink:interacts_with<br>\n",
     "2.) biolink:has_phenotype<br>\n",
     "\n",
     "The above predicates link the following biolink entities:<br>\n",
@@ -48,22 +50,25 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"biolink:Disease\": {\n",
-      "    \"biolink:PhenotypicFeature\": [\n",
-      "      \"biolink:has_phenotype\"\n",
+      "  \"biolink:Gene\": {\n",
+      "    \"biolink:Disease\": [\n",
+      "      \"biolink:gene_associated_with_condition\"\n",
+      "    ],\n",
+      "    \"biolink:Drug\": [\n",
+      "      \"biolink:interacts_with\"\n",
       "    ]\n",
       "  },\n",
       "  \"biolink:Drug\": {\n",
       "    \"biolink:Disease\": [\n",
-      "      \"biolink:affects\"\n",
+      "      \"biolink:treats\"\n",
       "    ],\n",
       "    \"biolink:Gene\": [\n",
-      "      \"biolink:affects\"\n",
+      "      \"biolink:interacts_with\"\n",
       "    ]\n",
       "  },\n",
-      "  \"biolink:Gene\": {\n",
-      "    \"biolink:Disease\": [\n",
-      "      \"biolink:affects\"\n",
+      "  \"biolink:Disease\": {\n",
+      "    \"biolink:PhenotypicFeature\": [\n",
+      "      \"biolink:has_phenotype\"\n",
       "    ]\n",
       "  }\n",
       "}\n"
@@ -138,13 +143,13 @@
     "    for node_id in reasoner_std['query_graph']['nodes'].keys():\n",
     "        node = reasoner_std['query_graph']['nodes'][node_id]\n",
     "        if node['category'] == 'biolink:Gene':\n",
-    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:affects',\n",
+    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:gene_associated_with_condition',\n",
     "                                                                               'subject': node_id,\n",
     "                                                                               'object': 'n{}'.format(node_count -1)   # should be disease node\n",
     "                                                                             }\n",
     "            edge_count += 1\n",
     "        elif node['category'] == 'biolink:Drug':\n",
-    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:affects',\n",
+    "            reasoner_std['query_graph']['edges']['e{}'.format(edge_count)] = { 'predicate':'biolink:treats',\n",
     "                                                                               'subject': node_id,\n",
     "                                                                               'object': 'n{}'.format(node_count -1)  # should be disease node\n",
     "                                                                             }\n",
@@ -298,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
